<?xml version="1.0" encoding="utf-8"?>
<!--
 # Copyright (c) 2013 mogoweb. All rights reserved.
-->
<!--
 # Copyright (c) 2013, The Linux Foundation. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are
 # met:
 #     * Redistributions of source code must retain the above copyright
 #      notice, this list of conditions and the following disclaimer.
 #    * Redistributions in binary form must reproduce the above
 #      copyright notice, this list of conditions and the following
 #      disclaimer in the documentation and/or other materials provided
 #      with the distribution.
 #    * Neither the name of The Linux Foundation nor the names of its
 #      contributors may be used to endorse or promote products derived
 #      from this software without specific prior written permission.
 #
 # THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
 # WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
 # MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
 # ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
 # BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
 # CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 # SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
 # BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 # WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 # OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 # IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/ANCHOR_MENU">
        <item android:id="@+id/open_in_new_tab_context_menu_id" android:title="@string/contextmenu_open_in_new_tab" />
        <!--
        <item android:id="@+id/open_in_incognito_tab_context_menu_id" android:title="@string/contextmenu_open_in_incognito_tab" />
        -->
        <item android:id="@+id/copy_link_address_context_menu_id" android:title="@string/contextmenu_copy_link_address" />
        <item android:id="@+id/copy_link_text_context_menu_id" android:title="@string/contextmenu_copy_link_text" />
        <!--
        <item android:id="@+id/save_link_as_context_menu_id" android:title="@string/contextmenu_save_link" />
        -->
    </group>
    <group android:id="@+id/IMAGE_MENU">
        <!--
        <item android:id="@+id/save_image_context_menu_id" android:title="@string/contextmenu_save_image" />
        <item android:id="@+id/open_image_context_menu_id" android:title="@string/contextmenu_open_image" />
        <item android:id="@+id/open_image_in_new_tab_context_menu_id" android:title="@string/contextmenu_open_image_in_new_tab" />
        <item android:id="@+id/open_original_image_in_new_tab_context_menu_id" android:title="@string/contextmenu_open_original_image_in_new_tab" />
        -->
    </group>
</menu>
